# runge_kutta

./: .gitmodules  CMakeLists.txt  package.xml
launch/: control_tutorial.py
src/: 01_unforced_response_with_mass_spring_damper.cpp  02_feedback_control_of_siso_system.cpp  03_optimal_control_using_lqr.cpp  04_inverted_pendulum_control_using_lqr.cpp  feedback_control_of_siso_system.cpp
